# cmake-cpp

./: CMakeLists.txt  README.md  example.cc
cmake/Modules/: Findbar.cmake  Findfoo.cmake
